# wasmarch

./: .gitmodules  README.md
crates/binary/: Cargo.toml
crates/binary/src/: lib.rs  module.rs
crates/binary/src/instructions/: block.rs  instruction.rs  mod.rs
crates/binary/src/sections/: code_section.rs  element_section.rs  export_section.rs  function_section.rs  global_section.rs  import_section.rs  memory_section.rs  mod.rs  start_section.rs  table_section.rs  type_section.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/modes/: grid.rs  mod.rs  sketch.rs  std.rs
crates/cli/src/std_lib/: mod.rs
crates/decoder/src/: decoder.rs  lib.rs  result.rs
crates/decoder/tests/: decoder.rs
crates/runtime/: Cargo.toml
crates/runtime/benches/: fib.rs
crates/runtime/benches/wasm/: fib.wasm  fib.wat
crates/runtime/src/: frame.rs  label.rs  lib.rs  result.rs  runtime.rs  rust_value.rs  store.rs  value.rs
crates/runtime/src/instances/: data.rs  element.rs  export.rs  func.rs  global.rs  memory.rs  mod.rs  module.rs  table.rs
crates/runtime/tests/: runtime.rs
crates/runtime/tests/wasm/: call_external.wat  call_internal.wat  fib.wat  global.wat  if_else.wat  local.wat  memory.wat  return.wat  return_const.wat  table.wat
crates/types/src/: func_type.rs  global_type.rs  lib.rs  limits.rs  memory_type.rs  ref_type.rs  result_type.rs  table_type.rs  value_type.rs
examples/: fib.was  if.was  lifegame-with-templates.was  lifegame.was  lifegame.wasm  lifegame.wat  mandelbrot.was  out.wasm  print.was  ptr.was  wihle.was
