[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decoder = { path = "../decoder" }
binary = { path = "../binary" }
types = { path = "../types" }

[dev-dependencies]
wabt = "0.10.0"
