[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "fib"
harness = false

[dependencies]
decoder = { path = "../decoder" }
binary = { path = "../binary" }
types = { path = "../types" }

[dev-dependencies]
wabt = "0.10.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
wasmtime = "10.0.1"
chibiwasm = { path = "../../../../skanehira/chibiwasm" }